# simon_pkl-FastApi

./: .env  .gitignore  Dockerfile  alembic.ini  dockerCompose.yaml  main.py  nohup.out  pyproject.toml  requirement.txt  schema.prisma  tes.html  tes.js
.github/workflows/: push-action.yml
alembic/: env.py
alembic/versions/: 69d64e61e54a_first_migration.py  afc07b12f81a_generate_table_migrations.py
src/auth/: bcrypt.py  create_token.py
src/auth/bcrypt/: bcrypt.py
src/auth/dependsAuthMiddleware/admin/: depend_auth_admin.py  depend_refresh_auth_admin.py  get_admin_auth.py
src/auth/dependsAuthMiddleware/developer/: depend_auth_developer.py  (+2 more)
src/auth/token/: create_token.py
src/cron_job/: addAbsenSiswaCron.py
src/db/: db.py  sessionDepedency.py
src/domain/auth/: authModel.py  authService.py
src/domain/chatting/: chattingModel.py  chattingService.py  chatting_utils.py
src/domain/developer/: developerModel.py  developerService.py
src/domain/models_domain/: absen_model.py  alamat_model.py  auth_model.py  chat_model.py  common_model.py  dudi_model.py  guru_pembimbing_model.py  kelas_jurusan_model.py  kunjungan_guru_pembimbing_model.py  laporan_kendala_dudi_model.py  laporan_kendala_model.py  laporan_pkl_dudi_model.py  laporan_pkl_siswa_model.py  notification_model.py  pembimbing_dudi_model.py  pengajuan_cancel_pkl_model.py  pengajuan_pkl_model.py  sekolah_model.py  siswa_model.py
src/domain/notification/: notificationModel.py  notificationService.py
src/error/: errorHandling.py
src/models/: __init__.py  absenModel.py  chatModel.py  developerModel.py  dudiModel.py  guruPembimbingModel.py  laporanPklModel.py  notificationModel.py  pembimbingDudiModel.py  pengajuanPklModel.py  responseModel.py  sekolahModel.py  siswaModel.py  types.py  userBaseModel.py
src/routes/: adminRouter.py  authRouter.py  chatRouter.py  developerRouter.py  guruPembimbingRouter.py  pembimbingDudiRouter.py  siswaRouter.py
src/socket/: connectDisconnectSocket.py  socker_error.py  socket.py  socketUpdateOnline.py  socketUtils.py  socket_hear_beat.py  socket_middleware.py
src/socket/chat/: chatSocket.py
src/utils/: removeFile.py  sendOtp.py  timeToFloat.py  updateTable.py
(+119 files in other folders)
